--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "nextjs-progressbar": "^0.0.16",
     "normalize.css": "^8.0.1",
     "qs": "^6.11.0",
     "react": "18.2.0",
